# ax286-aic8800-linux-6.17_x64-driver

./: .gitignore  README.md  driver_context.txt  patch.py
.github/workflows/: blank.yml
drivers/aic8800/: ..module-common.o.cmd  .Module.symvers.cmd  Kconfig  Module.symvers  configure.ac  log.html
drivers/aic8800/aic8800_fdrv/: .aic8800_fdrv.ko.cmd  .aic8800_fdrv.mod.o.cmd  .aic8800_fdrv.o.cmd  .aicwf_compat_8800dc.o.cmd  .aicwf_txrxif.o.cmd  .aicwf_usb.o.cmd  .ipc_host.o.cmd  .md5.o.cmd  .regdb.o.cmd  .rwnx_cfgfile.o.cmd  .rwnx_cmds.o.cmd  .rwnx_debugfs.o.cmd  .rwnx_dini.o.cmd  .rwnx_fw_trace.o.cmd  .rwnx_irqs.o.cmd  .rwnx_main.o.cmd  .rwnx_mesh.o.cmd  .rwnx_mod_params.o.cmd  .rwnx_msg_rx.o.cmd  .rwnx_msg_tx.o.cmd  .rwnx_pci.o.cmd  .rwnx_platform.o.cmd  .rwnx_radar.o.cmd  .rwnx_rx.o.cmd  .rwnx_strs.o.cmd  .rwnx_tdls.o.cmd  .rwnx_tx.o.cmd  .rwnx_txq.o.cmd  .rwnx_utils.o.cmd  .rwnx_v7.o.cmd  .usb_host.o.cmd  Makefile  aic8800_fdrv.mod.c  aicwf_compat_8800dc.c  aicwf_compat_8800dc.h  aicwf_txrxif.c  aicwf_usb.c  aicwf_usb.h  rwnx_cmds.c  rwnx_cmds.h  (+15 more)
drivers/aic8800/aic_load_fw/: .aic_bluetooth_main.o.cmd  .aic_load_fw.ko.cmd  .aic_load_fw.mod.o.cmd  .aic_load_fw.o.cmd  .aic_txrxif.o.cmd  .aicbluetooth.o.cmd  .aicbluetooth.o.d  .aicbluetooth_cmds.o.cmd  .aicwf_txq_prealloc.o.cmd  .aicwf_txq_prealloc.o.d  .aicwf_usb.o.cmd  .md5.o.cmd  aic_load_fw.ko  aic_load_fw.mod.c
drivers/aic8800/autom4te.cache/: output.0  traces.0
